- Bug Fix: Error on copy of plans, invisible fields not are deleted

8.0.0 (26-07-2021)
- Refactor: Allow specification of different product for standalone/extacurricular payment plans
- Improvement: Refactorization to use CustomCalculatorsMap on fillProperties
- Refactor: Refactor academic domain to dependent platform services
- Refactor: Move Bennu specific service implementations to fenixedu-academic-treasury-ui

7.2.2 (13-07-2021)
- Refactor: Remove excludesIfMatches property, which is not used
- Refactor: Use academic treasury dependent platform services to translate statute type description

7.2.1 (18-06-2021)
- Bug Fix: Remove and replace condition tuition rule beans

7.2.0 (17-06-2021)
- Refactor: Deprecate PaymentPenaltyEventTarget
- Bug Fix: Include other treasury events than AcademicTreasuryEvent, associated with debt account 

7.1.1 (15-06-2021)
- Refactor: Use TuitionPaymentPlanOrder to find a tuition payment plan by degree curricular plan

7.1.0 (07-06-2021)
- New Fixture: Shared tuition payment plan between curricular plans, check if payment plan is reachable, tuition conditions, tuition installments custom calculators
- Improvement: Use default payment platform to Automatic rules and Academic services
- Improvement: Add settlement note ERP certification date
- Refactor: Refactor payment penalty from fenixedu-academic-treasury-base to fenixedu-treasury

7.0.3 (10-05-2021)
- Refactor: Replace discontinued PaymentCodePool by DigitalPaymentPlatform

7.0.2 (13-04-2021)
- Bug Fix: Invoking deprecated payment request service (UL-ISEG-552, UL-ISEG-560)

7.0.1 (12-04-2021)
- Bug Fix: Do not consider as in academic debt, debit entries in compliant open payment plans
- Improvement: Show debt report file size as kb, if the size is lower than 1MB
- Bug Fix: Validate that debt report request's endDate is not before beginDate

7.0.0 (10-04-2021)
- New Fixture: Digital Payment Platforms

6.3.0 (10-04-2021)
- Refactor: Digital Payment Platform domain model
