@@ -1,4 +1,5 @@
 - Bug Fix: Error on copy of plans, invisible fields not are deleted
+- Bug Fix: Reverted deletion of  PaymentPenaltySettings and PaymentPenaltyEventTarget (#UL-ISEG-1757)
 
 8.0.0 (26-07-2021)
 - Refactor: Allow specification of different product for standalone/extacurricular payment plans
